changed colors and text description

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
                         <!--Social Icons in Header-->
                         <ul class="social-icons">
-                            <li>
+                            <!-- <li>
                                 <a target="_blank" title="Facebook" href="https://www.facebook.com/username">
                                     <i class="fa fa-facebook fa-1x"></i><span>Facebook</span>
                                 </a>
@@ -81,7 +81,7 @@
                                 <a target="_blank" title="Google+" href="http://google.com/+username">
                                     <i class="fa fa-google-plus fa-1x"></i><span>Google+</span>
                                 </a>
-                            </li>
+                            </li> -->
                             <!--                            <li>
                                 <a target="_blank" title="Twitter" href="http://www.twitter.com/username">
                                     <i class="fa fa-twitter fa-1x"></i><span>Twitter</span>
@@ -120,7 +120,7 @@
                             </li>
                             -->
                             <li>
-                                <a href="#clients">Clients</a>
+                                <a href="#clients">Contact Us</a>
                             </li>
                             <!--
                             <li>
@@ -144,8 +144,8 @@
             <div class="col-38">
 
                 <div class="section-heading">
-                    <h1>AR STAR</h1>
-                    <h2>AR-STAR - small description</h2>
+                    <h1 class="section-heading-main">AR STAR</h1>
+                    <p class="section-heading-description">We Create Assets</p>
                 </div>
 
                 <!--Call to Action
@@ -170,8 +170,8 @@
                         <!--
                         <h3>SUCCESS</h3>
                         -->
-                        <h2 class="section-title">How We Help You To Sell Your Product</h2>
-                        <p class="section-subtitle">Description</p>
+                        <h2 class="section-title">Some interesting projects we are working on</h2>
+                        <!-- <p class="section-subtitle">Description</p> -->
                     </div>
 
                 </div>
@@ -382,10 +382,10 @@
                     <div class="section-heading">
                         <!-- <div class="quote-box">"We help in bringing your products to Augumented reality" </div> -->
                         <!-- <h2 font-style: italic; class="section-title">"We help in bringing your products to Augumented reality"</h2> -->
-                        <h2> "We help in bringing your products to Augumented reality" </h2>
+                        <h2> "We design your 3D models for all kinds of AR/VR apps." </h2>
                         <!-- <h2>For more information, contact us at:</h2> -->
                         <p class="contact-section-subtitle">For more information, contact us at: </p>
-                        <a href="mailto:makaravind11195@gmail.com?Subject=AR-STAR" target="_top" >makaravind11195@gmail.com</a> 
+                        <a style="color:black" href="mailto:makaravind11195@gmail.com?Subject=AR-STAR" target="_top" >makaravind11195@gmail.com</a> 
                     </div>
 
                 </div>
