Modified banner, colours and text

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>AR-STAR</title>
 
     <!--Meta Keywords and Description-->
-    <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="keywords" content="Augumented reality,virtual reality,3d models,assets,design">
+    <meta name="description" content="we build 3d assets for all kinds of Augumented and virtual reality apps">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
 
     <!--Favicon-->
@@ -106,7 +106,7 @@
                                 <a href="#banner">Home</a>
                             </li>
                             <li>
-                                <a href="#about">About</a>
+                                <a href="#about">Works</a>
                             </li>
                             <li>
                                 <a href="#gallery">Gallery</a>
@@ -145,7 +145,7 @@
 
                 <div class="section-heading">
                     <h1 class="section-heading-main">AR STAR</h1>
-                    <p class="section-heading-description">We Create Assets</p>
+                    <p class="section-heading-description">We Build Assets</p>
                 </div>
 
                 <!--Call to Action
