--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                         <h2> "We design your 3D models for all kinds of AR/VR apps." </h2>
                         <!-- <h2>For more information, contact us at:</h2> -->
                         <p class="contact-section-subtitle">For more information, contact us at: </p>
-                        <a style="color:black" href="mailto:makaravind11195@gmail.com?Subject=AR-STAR" target="_top" >makaravind11195@gmail.com</a> 
+                        <a style="color:black" href="mailto:arstar.assets@gmail.com?Subject=AR-STAR" target="_top" >arstar.assets@gmail.com</a> 
                     </div>
 
                 </div>
